// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Filter Added Filter 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-3:hover>div {
  background-color: #f3f5f8;
}

.emotion-3:active>div {
  background-color: #e7ebf2;
}

.emotion-3:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-3:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-4 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 0.25rem 0 1rem;
  border-radius: 1.5rem;
  border-right: 0!important;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-4:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-6 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-7 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-7 span {
  font-weight: 700;
}

.emotion-8 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-10 path {
  fill: #0f0f17;
}

.emotion-11 {
  height: 100%;
  width: 0.0625rem;
  position: relative;
  min-width: 0.0625rem;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  background-color: #cfd7e5;
  border-top: solid 0.0625rem #cfd7e5;
  border-bottom: solid 0.0625rem #cfd7e5;
}

.emotion-12 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 2.125rem;
  border-left: 0!important;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-right-radius: 1.5rem;
  border-bottom-right-radius: 1.5rem;
}

.emotion-12:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-14 {
  fill: #5b5b71;
  width: 1.1875rem;
  height: 1.1875rem;
}

.emotion-14 path {
  fill: #5b5b71;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <h2>
      Added
    </h2>
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div>
            filled
            (
            primary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                    >
                      <span
                        className="emotion-7"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-8"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-9"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-10"
                      />
                    </span>
                  </div>
                </div>
                <span
                  className="emotion-11"
                />
                <div
                  className="emotion-12"
                >
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-14"
                    />
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div>
            filled
            (
            secondary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                    >
                      <span
                        className="emotion-7"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-8"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-9"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-10"
                      />
                    </span>
                  </div>
                </div>
                <span
                  className="emotion-11"
                />
                <div
                  className="emotion-12"
                >
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-14"
                    />
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <h2>
      Transparent
    </h2>
    <div>
      Transparent Styles are not available for added filters
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Async Filter 1`] = `
.emotion-0 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-1 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-1:hover>div {
  background-color: #f3f5f8;
}

.emotion-1:active>div {
  background-color: #e7ebf2;
}

.emotion-1:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-1:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-2 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-2:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-4 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-5 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-5 span {
  font-weight: 700;
}

.emotion-6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-8 path {
  fill: #0f0f17;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      role="button"
    >
      <div
        className="emotion-0"
      >
        <button
          className="emotion-1"
          data-testid="filter"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <div>
                    Async Label
                     
                    : 
                  </div>
                  <span
                    className="emotion-6"
                  >
                    Default value
                  </span>
                </span>
              </div>
              <span
                className="emotion-7"
                onClick={[Function]}
              >
                <span
                  className="emotion-8"
                />
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Async Filter with min characters 1`] = `
.emotion-0 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-1 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-1:hover>div {
  background-color: #f3f5f8;
}

.emotion-1:active>div {
  background-color: #e7ebf2;
}

.emotion-1:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-1:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-2 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-2:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-4 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-5 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-5 span {
  font-weight: 700;
}

.emotion-6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-8 path {
  fill: #0f0f17;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      role="button"
    >
      <div
        className="emotion-0"
      >
        <button
          className="emotion-1"
          data-testid="filter"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <div>
                    Async Label
                     
                    : 
                  </div>
                  <span
                    className="emotion-6"
                  >
                    Default value
                  </span>
                </span>
              </div>
              <span
                className="emotion-7"
                onClick={[Function]}
              >
                <span
                  className="emotion-8"
                />
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Dynamic Filter Props 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-2:hover>div {
  background-color: #f3f5f8;
}

.emotion-2:active>div {
  background-color: #e7ebf2;
}

.emotion-2:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-2:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-3:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-5 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-6 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-6 span {
  font-weight: 700;
}

.emotion-7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-9 path {
  fill: #0f0f17;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div>
        filled
        (
        primary
        ): 
      </div>
      <div
        role="button"
      >
        <div
          className="emotion-1"
        >
          <button
            className="emotion-2"
            data-testid="filter"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="emotion-3"
            >
              <div
                className="emotion-4"
              >
                <div
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <div>
                      you can change me
                       
                      : 
                    </div>
                    <span
                      className="emotion-7"
                    >
                      Peach
                    </span>
                  </span>
                </div>
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-9"
                  />
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Preset Filter 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-3:hover>div {
  background-color: #f3f5f8;
}

.emotion-3:active>div {
  background-color: #e7ebf2;
}

.emotion-3:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-3:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-4 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-4:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-6 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-7 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-7 span {
  font-weight: 700;
}

.emotion-8 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-10 path {
  fill: #0f0f17;
}

.emotion-24 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-24:hover>div {
  background-color: #f3f5f8;
}

.emotion-24:active>div {
  background-color: #e7ebf2;
}

.emotion-24:focus-visible>div {
  border: 0.0625rem solid #F814E1;
}

.emotion-24:focus-visible>span {
  border-top: 0.0625rem solid #F814E1;
  border-bottom: 0.0625rem solid #F814E1;
}

.emotion-25 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: transparent;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-25:hover {
  border: solid 0.0625rem transparent;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <h2>
      Preset
    </h2>
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div>
            filled
            (
            primary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                    >
                      <span
                        className="emotion-7"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-8"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-9"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-10"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div>
            filled
            (
            secondary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                    >
                      <span
                        className="emotion-7"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-8"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-9"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-10"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <h2>
      Transparent
    </h2>
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div>
            transparent
            (
            primary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-24"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-25"
                >
                  <div
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                    >
                      <span
                        className="emotion-7"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-8"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-9"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-10"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div>
            transparent
            (
            secondary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-24"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-25"
                >
                  <div
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                    >
                      <span
                        className="emotion-7"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-8"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-9"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-10"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Searchable Filter 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-3:hover>div {
  background-color: #f3f5f8;
}

.emotion-3:active>div {
  background-color: #e7ebf2;
}

.emotion-3:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-3:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-4 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-4:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-6 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-7 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-7 span {
  font-weight: 700;
}

.emotion-8 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-10 path {
  fill: #0f0f17;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      className="emotion-0"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-1"
        >
          <div>
            filled
            (
            primary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-2"
            >
              <button
                className="emotion-3"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-5"
                  >
                    <div
                      className="emotion-6"
                    >
                      <span
                        className="emotion-7"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-8"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-9"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-10"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
